[package]
name = "daisy-pod-embassy"
version = "0.1.0"
edition = "2024"
authors = ["DicklessGreat<dicklessgreat@gmail.com>"]
description = "daisy-seed on daisy-pod flavor"
keywords = ["embassy", "async", "audio", "embedded", "no-std"]
license = "MIT"
repository = "https://github.com/daisy-embassy/daisy-pod-embassy"
categories = ["embedded"]

[dependencies]

daisy-embassy = { version = "0.2.3" }