[package]
name = "daisy-pod-embassy"
version = "0.1.0"
edition = "2024"
authors = ["DicklessGreat<dicklessgreat@gmail.com>"]
description = "daisy-seed on daisy-pod flavor"
keywords = ["embassy", "async", "audio", "embedded", "no-std"]
license = "MIT"
repository = "https://github.com/daisy-embassy/daisy-pod-embassy"
categories = ["embedded"]

[dependencies]
daisy-embassy = { version = "0.2.3" }

[dev-dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7.0", features = ["device"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768", "generic-queue-8"] }
embassy-futures = { version = "0.1.1" }
grounded = "0.2.1"
midly = { version = "0.5.3", default-features = false }

[patch.crates-io]
daisy-embassy = { git = "https://github.com/daisy-embassy/daisy-embassy.git", rev = "dd7cc97857791451304ed34de9446e6ea8f78a1e" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "70aa65871e26f087e0baaf8e737371a4d5fd6d20" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "70aa65871e26f087e0baaf8e737371a4d5fd6d20" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "70aa65871e26f087e0baaf8e737371a4d5fd6d20" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "70aa65871e26f087e0baaf8e737371a4d5fd6d20" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "70aa65871e26f087e0baaf8e737371a4d5fd6d20" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", rev = "70aa65871e26f087e0baaf8e737371a4d5fd6d20" }

[features]
seed = ["daisy-embassy/seed"]
seed_1_1 = ["daisy-embassy/seed_1_1"]
seed_1_2 = ["daisy-embassy/seed_1_2"]
patch_sm = ["daisy-embassy/patch_sm"]

[[example]]
name = "peripheral_demo"
path = "examples/peripheral_demo.rs"
